# misc-cpp

./: .clang-format  .gitignore  .gitmodules  14feb2025.pptx  README.md  accumulate.cpp  attributes  attributes.cpp  attributes_2  attributes_2.cpp  clear  compile.sh  conceptcrtp  crtp  decorator  decorator.cpp  erroneous  flatten.cpp  float.cpp  latch  matmul_transpose  matmul_transpose.cpp  max  max.cpp  mmap.cpp  move  move.cpp  mpi.cpp  nocrtp.cpp  omp_reduction_max.cpp  omp_static  omp_static.cpp  passatomicbyref  passatomicbyref.cpp  pointer_arithmetic.cpp  private.cpp  quick.sh  random.cpp  ref  ref.cpp  (+19 more)
anagram/: anagram  anagram.cpp  compile.sh
concurrency/: barrier.cpp  latch.cpp  stickycounter.cpp  stopsource.cpp
hashguards/: compile.sh  hashtest  hashtest.cpp  hashtest_guarded  hashtest_guarded.cpp  hashtest_unguarded  hashtest_unguarded.cpp
include/: nbtlog.hpp
matmul/: CMakeLists.txt  build.sh  compile.sh  matmul  matmul.cpp  plot.py  quick.sh  random.py
matmul/.cache/clangd/index/: matmul.cpp.DA427FACCFD7D446.idx  nbtlog.hpp.2A94620FF22292AE.idx
matmul/include/: nbtlog.hpp
memory/: copy_elision.cpp  erroneous.cpp  move.cpp
omp/: CMakeLists.txt  omp.cpp  run.sh
oop/: association.cpp
performance/: NBTlog.hpp  constexpr_array.cpp  flamegraph.pl  quicksort.cpp  reduction.cpp  sort  sort.cpp  stackcollapse-perf.pl
sp25_cpsc424/: bad_mutex.cpp  cas  cas.cpp  compile.sh  concurrency.cpp  fetchadd  fetchadd.cpp  linkedlist.cpp  lock.cpp  mutex  mutex.cpp  nowait.cpp  parallel_bfs.cpp  scope.cpp  spinlock  spinlock.cpp  thread.cpp
(+13 files in other folders)
